[gd_scene load_steps=3 format=2]

[ext_resource path="res://assets/ui_theme.tres" type="Theme" id=1]
[ext_resource path="res://src/UI elements/UI.gd" type="Script" id=2]

[node name="UI" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PauseMenu" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.196078 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -94.5
margin_top = -217.0
margin_right = 94.5
margin_bottom = -157.0
theme = ExtResource( 1 )
text = "Paused"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="PauseMenu"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -200.0
margin_top = -130.0
margin_right = 200.0
margin_bottom = 270.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RetryButton" type="Button" parent="PauseMenu/ButtonContainer"]
margin_right = 400.0
margin_bottom = 130.0
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Retry"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HomeButton" type="Button" parent="PauseMenu/ButtonContainer"]
margin_top = 134.0
margin_right = 400.0
margin_bottom = 264.0
size_flags_vertical = 3
text = "Main Screen"

[node name="QuitButton" type="Button" parent="PauseMenu/ButtonContainer"]
margin_top = 268.0
margin_right = 400.0
margin_bottom = 400.0
size_flags_vertical = 3
theme = ExtResource( 1 )
text = "Quit"
[connection signal="button_up" from="PauseMenu/ButtonContainer/RetryButton" to="." method="_on_RetryButton_button_up"]
[connection signal="button_up" from="PauseMenu/ButtonContainer/HomeButton" to="." method="_on_HomeButton_button_up"]
[connection signal="button_up" from="PauseMenu/ButtonContainer/QuitButton" to="." method="_on_QuitButton_button_up"]
